# c2p

./: .gitignore  Architecture.md  BACKUP.md  Deployment.md  LICENSE  README.md  RELEASE_NOTES.md  REPO_USAGE_PLAN.md  ROADMAP.md  Setup.md  VERIFICATION_REPORT.md
apps/web/: package-lock.json  package.json
c2p-platform/apps/api/: .env  .env.demo  .env.example  Dockerfile  README.md  alembic.ini  demo_server.py  pyproject.toml  verify_phase2.py
c2p-platform/apps/api/alembic/: env.py
c2p-platform/apps/api/alembic/versions/: 001_initial_migration.py  002_add_contracts_table.py  003_add_invoices_table.py  004_add_compliance.py  dcb0f654987e_add_document_extractions_table.py
c2p-platform/apps/api/app/: main.py
c2p-platform/apps/api/app/api/: deps.py
c2p-platform/apps/api/app/api/v1/: __init__.py  auth.py  users.py
c2p-platform/apps/api/app/api/v1/compliance/: router.py
c2p-platform/apps/api/app/api/v1/contracts/: router.py
c2p-platform/apps/api/app/api/v1/documents/: router.py
c2p-platform/apps/api/app/core/: config.py  database.py  logging.py  security.py
c2p-platform/apps/api/app/models/: __init__.py  compliance.py  contract.py  document.py  invoice.py  user.py
c2p-platform/apps/api/app/schemas/: __init__.py  compliance.py  contract.py  document.py  invoice.py  user.py
c2p-platform/apps/api/app/services/: __init__.py  compliance_service.py  contract_service.py  document_parser.py  invoice_service.py  user_service.py
c2p-platform/apps/api/tests/: conftest.py  test_auth.py  test_compliance.py  test_contracts.py  test_documents.py  test_invoices.py
(+19 files in other folders)
