[project]
name = "c2p-api"
version = "0.1.0"
description = "Contract-to-Payment Compliance Platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "email-validator==2.1.0.post1",
    "httpx==0.27.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "aiosqlite==0.19.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "B", "C4", "ARG"]
ignore = ["E501", "B008"]